# qiko-smart-device

./: .env.example  .gitignore  pyproject.toml
qiko_smart_device/: lifecycle.py  main.py  tcp_client.py
qiko_smart_device/config/: __init__.py  app_config.py  bemfa_config.py  log_config.py
